Scrolling issue fixed and Logo navigates to dashboard

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="NeoSec - Authentication application"
     />
-    <title>NeoSec - Authentication</title>
+    <title>NeoSec</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
